feat(dataset): new endpoint to get the latest version of a dataset (#229)
link #180
